// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breakpoints adding a breakpoint to an invalid location adds only one breakpoint with a corrected location 1`] = `
Object {
  "astLocation": Object {
    "name": undefined,
    "offset": Object {
      "line": 7,
      "sourceId": "a",
      "sourceUrl": "http://localhost:8000/examples/a",
    },
  },
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "line": 7,
    "sourceId": "a",
    "sourceUrl": "http://localhost:8000/examples/a",
  },
  "hidden": false,
  "hitCount": undefined,
  "id": "a:5:",
  "loading": false,
  "location": Object {
    "line": 7,
    "sourceId": "a",
    "sourceUrl": "http://localhost:8000/examples/a",
  },
  "originalText": "",
  "text": "",
}
`;

exports[`breakpoints should remap breakpoints on pretty print 1`] = `
Object {
  "astLocation": Object {
    "name": undefined,
    "offset": Object {
      "line": 1,
      "sourceId": "a.js",
      "sourceUrl": "http://localhost:8000/examples/a.js",
    },
  },
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "line": 1,
    "sourceId": "a.js",
    "sourceUrl": "http://localhost:8000/examples/a.js",
  },
  "hidden": false,
  "hitCount": undefined,
  "id": "hi",
  "loading": false,
  "location": Object {
    "column": 0,
    "line": 1,
    "sourceId": "a.js/originalSource-d6d70368d5c252598541e693a7ad6c27",
    "sourceUrl": "http://localhost:8000/examples/a.js:formatted",
  },
  "originalText": "function a() {",
  "text": "function a() {",
}
`;
